# JamTalk

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: DEPLOYMENT_RUNBOOK.md  GITHUB_MILESTONES.md  MILESTONES_M0_M5.md  ROADMAP_POLKADOT_TESTNET.md  SPRINT_1_EXECUTION_CHECKLIST.md  TEAM_TRACKING_INDEX.md  WEEK1_TICKETS.md  WEEK2_TICKETS.md  WEEK3_TICKETS.md  WEEK4_TICKETS.md  WEEK5_TICKETS.md  WEEK6_TICKETS.md
src/: accumulate.rs  auth.rs  client_crypto.rs  crypto.rs  errors.rs  host.rs  lib.rs  persistence.rs  pop.rs  refine.rs  runtime.rs  state.rs  types.rs  web_api.rs
tests/: client_crypto.rs  invariants.rs  persistence.rs  pop_http_integration.rs  pop_soft_gate.rs  runtime.rs  web_api.rs
web/: app.js  index.html  landing.html  privacy.html  styles.css  terms.html
