[package]
name = "jam-messenger"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "JamTalk: on-chain messenger service skeleton for JAM"

[features]
default = []
pop-http = ["dep:reqwest", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
blake2 = "0.10"
bincode = "1.3"
hex = "0.4"
ed25519-dalek = "2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
