[package]
name = "jam-messenger"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "JamTalk: on-chain messenger service skeleton for JAM"

[features]
default = []
pop-http = ["dep:reqwest"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
blake2 = "0.10"
bincode = "1.3"
hex = "0.4"
ed25519-dalek = "2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde_json = "1"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
tower = "0.5"
serde_json = "1"
